simple-version/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          #image: edwinguo123/node-js-new
          image: edwinguo123/flask-server:v2
          ports:
            - containerPort: 3000
